# chess_engines

./: .gitignore  ChessAnalysisP2.ipynb  Engines_and_Simulator.py  README.md  env.yaml  environment.yaml  main.py  pyproject.toml
DQN/: Model.py  test.py
_notebooks/: DQN.ipynb
chess_environment/: environment.py
chess_environment/move_encoding/: knightmoves.py  queenmoves.py  underpromotions.py  utils.py
engines/: model.py
notebooks/: DQN.ipynb  neural_net.ipynb
