[tool.poetry]
name = "chess-engines"
version = "0.1.0"
description = "Final project for AMS 325, SBU"
authors = ["Sung J Kim <1998sungjoong@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_engines"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
jupyterlab = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
